[package]
name = "dex-math"
version = "0.1.5"
edition = "2021"
description = "Darklake DEX Math"
authors = ["Darklake Team"]
license = "MIT"
documentation = "https://docs.rs/dex-math"
homepage = "https://github.com/darklakefi/dex-math"
repository = "https://github.com/darklakefi/dex-math.git"

[lib]
name = "dex_math"
path = "src/lib.rs"

[dependencies]
anchor-lang = "0.31.1"
borsh = "0.10"

[dev-dependencies]
proptest = "1.7.0"
spl-math = { version = "0.3.0", features = ["no-entrypoint"] }
